--- a/public/main.scss
+++ b/public/main.scss
@@ -1,1 +1,64 @@
-// styling
+
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    background: linear-gradient(180deg, #161616 0%, #000000 68.75%);}
+
+h1{
+    color: white;
+    margin-left: 1em;
+}
+
+header{
+    background-color: black;
+    color: white;
+    nav{
+        display: flex;
+        justify-content: flex-end;
+        a{
+            display: inline-block;
+            margin: 1em;
+        }
+    }
+}
+
+
+section{
+    margin: 0em 0em;
+}
+
+// TODO: This likely doesnt work on firefox!!
+::-webkit-scrollbar{
+    display: none;
+    width: 0 !important;
+}
+
+.card-container{
+    $card-width: 212px;    
+    $card-height: 312px;
+    $scale-factor: 1.1;
+    $default-color: rgb(186, 186, 186);
+
+    height: 20px + $card-height * $scale-factor;
+    margin: 2em 0em 4em 0.25em;
+
+    overflow: auto;
+    overflow-y: hidden; // disable vertical scroll
+    width: 100%;
+
+
+    display: flex;
+    .card{
+        background-color: $default-color;
+        height: $card-height;
+        border-radius: 19px;
+        margin: 0.25em;
+        flex: 0 0 $card-width;
+        transition: height 120ms, flex 120ms;
+    }
+    .card:hover{
+        height: $card-height * $scale-factor;
+        flex: 0 0 $card-width * $scale-factor;
+    }
+}
+
