--- a/public/main.scss
+++ b/public/main.scss
@@ -1,64 +1,175 @@
 
-body{
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-    background: linear-gradient(180deg, #161616 0%, #000000 68.75%);}
+// global color variables
+$main-text-col: rgb(237, 237, 237); // main background colour
+$main-background-col: #0A0A0A; // main background colour
+$alt-background-col: #101010; // lighter colour to main background colour to highlight information   
+$input-border-col: #2B2B2B;
 
-h1{
-    color: white;
+// global fonts
+$body-font-family: Arial, Helvetica, sans-serif;
+
+body {
+    font-family: $body-font-family;
+    margin: 0;
+    background: linear-gradient(180deg, #161616 0%, #000000 68.75%);
+}
+
+h1 {
+    color: $main-text-col;
     margin-left: 1em;
 }
 
-header{
-    background-color: black;
-    color: white;
-    nav{
+header {
+    background-color: $main-background-col;
+    color: $main-text-col;
+
+    nav {
         display: flex;
         justify-content: flex-end;
-        a{
+
+        a {
             display: inline-block;
             margin: 1em;
         }
     }
 }
 
-
-section{
+section {
     margin: 0em 0em;
 }
 
 // TODO: This likely doesnt work on firefox!!
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     display: none;
     width: 0 !important;
 }
 
-.card-container{
-    $card-width: 212px;    
+.card-container {
+    $card-width: 212px;
     $card-height: 312px;
     $scale-factor: 1.1;
     $default-color: rgb(186, 186, 186);
 
     height: 20px + $card-height * $scale-factor;
     margin: 2em 0em 4em 0.25em;
-
     overflow: auto;
     overflow-y: hidden; // disable vertical scroll
     width: 100%;
-
-
     display: flex;
-    .card{
-        background-color: $default-color;
+
+    .card {
+        background-image: url("images/poster_na.jpg");
+        background-size: cover;
+        background-repeat: none;
         height: $card-height;
         border-radius: 19px;
         margin: 0.25em;
         flex: 0 0 $card-width;
         transition: height 120ms, flex 120ms;
+        cursor: pointer;
     }
-    .card:hover{
+
+    .card:hover {
         height: $card-height * $scale-factor;
         flex: 0 0 $card-width * $scale-factor;
     }
 }
 
+#moviePage {
+    color: $main-text-col;
+    background-color: $main-background-col;
+    width: 90%;
+    margin: 2em auto;
+    padding: 2em;
+    
+    // overlay
+    position: fixed;
+    right: 100%;
+
+    .review-form{
+        background-color: $alt-background-col;
+    }
+
+    .movie-information{
+        margin-left: 3em;
+    }
+
+    .movie-page-container {
+
+        display: flex;
+
+        .poster {
+            width: 30%;
+            border-radius: 16px;
+            object-fit: cover;
+        }
+
+        .details-container {
+            display: flex;
+
+            .details {
+                margin-right: 3em;
+            }
+
+        }
+
+        .review-box {
+            background-color: $alt-background-col;
+            margin-right: 3em;
+        }
+    }
+
+    h1 {
+        margin: 0;
+    }
+}
+
+textarea{
+    background-color: $main-background-col;
+    border-radius: 16px;
+    border: 2px solid $input-border-col;
+    color: $main-text-col;
+    font-family: $body-font-family;
+    width: 100%;
+    margin: 2em;
+    
+    // reset
+    resize: none;
+    box-shadow: none;
+    overflow: auto;
+
+}
+
+.button{
+    border: 2px solid;
+    background-color: $main-text-col;
+    color: $main-background-col;
+    padding: 1em 2em;
+    font-weight: 700;
+    font-size: 1em;
+    border-radius: 20px;
+    transition: color, background-color 150ms ease;
+}
+
+.button:hover{
+    border: 2px solid $input-border-col;
+    background-color: $alt-background-col;
+    color: $main-text-col;
+    cursor: pointer;
+}
+
+input{
+    margin: 1em;
+}
+
+// submit button
+input[type=submit]{
+    // use of scss inheritance implements existing properties of the base button class  
+    @extend .button
+}
+
+label{
+    font-size: 16px;
+    color: $main-text-col;
+    margin: 0.5em;
+}
