--- a/public/main.scss
+++ b/public/main.scss
@@ -1,17 +1,21 @@
-
 // global color variables
 $main-text-col: rgb(237, 237, 237); // main background colour
+$main-mid-color: #CBCBCB;
 $main-background-col: #0A0A0A; // main background colour
 $alt-background-col: #101010; // lighter colour to main background colour to highlight information   
 $input-border-col: #2B2B2B;
+$border-rad: 16px;
 
 // global fonts
-$body-font-family: Arial, Helvetica, sans-serif;
+$body-font-family: 'Inter', Arial, Helvetica, sans-serif;
 
 body {
     font-family: $body-font-family;
     margin: 0;
-    background: linear-gradient(180deg, #161616 0%, #000000 68.75%);
+    background: linear-gradient(0, #161616 0%, #1e1e1e 68.75%);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    height: 100%;
 }
 
 h1 {
@@ -19,9 +23,12 @@ h1 {
     margin-left: 1em;
 }
 
-header {
+body>header {
     background-color: $main-background-col;
     color: $main-text-col;
+
+    // make header overlay everything with a high z index 
+    z-index: 5;
 
     nav {
         display: flex;
@@ -40,8 +47,18 @@ section {
 
 // TODO: This likely doesnt work on firefox!!
 ::-webkit-scrollbar {
-    display: none;
-    width: 0 !important;
+    width: 0.5em;
+    height: 0.5em;
+}
+
+::-webkit-scrollbar-track {
+    background-color: $main-background-col;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: $input-border-col;
+    outline: none;
+    border-radius: $border-rad;
 }
 
 .card-container {
@@ -75,32 +92,39 @@ section {
     }
 }
 
-#moviePage {
+#movieDetailsPage {
     color: $main-text-col;
-    background-color: $main-background-col;
     width: 90%;
-    margin: 2em auto;
     padding: 2em;
-    
-    // overlay
-    position: fixed;
-    right: 100%;
+    border-radius: $border-rad;
 
-    .review-form{
+    z-index: 2;
+    opacity: 0;
+
+    .review-form {
         background-color: $alt-background-col;
     }
 
-    .movie-information{
+    .movie-information {
         margin-left: 3em;
     }
 
-    .movie-page-container {
+    header {
+        display: flex;
+        padding: 1em;
+    }
 
+    header>button {
+        margin-left: auto;
+    }
+
+    .movie-page-container {
         display: flex;
 
-        .poster {
+        #detailsPoster {
             width: 30%;
-            border-radius: 16px;
+            height: 100%;
+            border-radius: $border-rad;
             object-fit: cover;
         }
 
@@ -124,23 +148,26 @@ section {
     }
 }
 
-textarea{
+#movieAddPage {
+    width: 90%;
+}
+
+textarea {
     background-color: $main-background-col;
-    border-radius: 16px;
+    border-radius: $border-rad;
     border: 2px solid $input-border-col;
     color: $main-text-col;
     font-family: $body-font-family;
     width: 100%;
     margin: 2em;
-    
+
     // reset
     resize: none;
     box-shadow: none;
     overflow: auto;
-
 }
 
-.button{
+.button {
     border: 2px solid;
     background-color: $main-text-col;
     color: $main-background-col;
@@ -148,28 +175,170 @@ textarea{
     font-weight: 700;
     font-size: 1em;
     border-radius: 20px;
-    transition: color, background-color 150ms ease;
+    transition: color, background-color 100ms;
 }
 
-.button:hover{
+.button:hover {
     border: 2px solid $input-border-col;
     background-color: $alt-background-col;
     color: $main-text-col;
     cursor: pointer;
 }
 
-input{
+.input-generic {
+    background-color: $alt-background-col;
+    border: 2px solid $input-border-col;
+    background-color: $alt-background-col;
+    border-radius: $border-rad;
+    padding: 0.5em 2em;
+    color: $main-text-col;
+    font-family: $body-font-family;
+}
+
+// generic grid class to align elements next to each other
+.flex-grid {
+    display: flex;
     margin: 1em;
 }
 
-// submit button
-input[type=submit]{
+// inputs
+.upload-image-area {
+    width: 50%;
+    margin: 1em;
+    border: 3px dashed $main-mid-color;
+    border-radius: 25px;
+    background-color: $alt-background-col;
+
+    div {
+        color: $main-mid-color;
+        text-align: center;
+        display: block;
+        margin: 50% auto;
+
+        p {
+            margin-top: 2em;
+        }
+
+        object {
+            display: block;
+            margin: auto;
+        }
+    }
+}
+
+form {
+    margin: 1em;
+    width: 50%;
+}
+
+input {
+    margin: 1em;
+    border: none;
+}
+
+input {
+    border: none !important;
+    height: 2em;
+}
+
+input[type=date] {
+    @extend .input-generic
+}
+
+input[type=text] {
+    @extend .input-generic
+}
+
+.big-text-input {
+    font-size: large;
+    width: 100%;
+    margin: -1em 0 1em 0;
+}
+
+
+.input-multi {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 1em;
+    row-gap: 1em;
+    margin: 1em;
+    width: 100%;
+
+    input {
+        margin: 0 0 0 0;
+        height: 2em;
+
+        &:hover {
+            background-color: #161616;
+        }
+    }
+
+    button {
+        color: white;
+        border: none;
+        width: 3em;
+        height: 3em;
+        border-radius: 100%;
+        background-color: $alt-background-col;
+        margin: 0;
+        cursor: pointer;
+
+        &:hover {
+            background-color: white;
+            color: $alt-background-col;
+        }
+    }
+}
+
+
+input[type=submit] {
     // use of scss inheritance implements existing properties of the base button class  
     @extend .button
 }
 
-label{
+#searchFilmsInput {
+    border-radius: $border-rad;
+    padding: 0.5em;
+}
+
+#addMovieButton {
+    border-radius: 100px;
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0);
+    color: white;
+    border: white 1px solid;
+    padding: 0.5em;
+    margin: 0;
+    transition: background-color 250ms;
+
+    // icon
+    img {
+        margin: 0 auto -4px auto;
+        width: 1.25em;
+        stroke: black;
+        transition: width 250ms;
+    }
+
+    &:hover {
+        background-color: $input-border-col;
+    }
+}
+
+
+
+
+label {
     font-size: 16px;
     color: $main-text-col;
     margin: 0.5em;
+}
+
+.exit-button {
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+
+.hide {
+    display: none;
 }
