--- a/public/main.scss
+++ b/public/main.scss
@@ -5,8 +5,11 @@ $main-background-col: #0A0A0A; // main background colour
 $alt-background-col: #101010; // lighter colour to main background colour to highlight information   
 $border-rad: 16px;
 
-$input-border-col: #2B2B2B;
+$mid-gray-col: #2B2B2B;
+
+$input-border: 2px solid #2B2B2B;
 $input-font-size: 16px;
+$input-hover-col: #161616;
 
 // global fonts
 $body-font-family: 'Inter', Arial, Helvetica, sans-serif;
@@ -72,7 +75,7 @@ section {
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: $input-border-col;
+    background-color: $mid-gray-col;
     outline: none;
     border-radius: $border-rad;
 }
@@ -170,7 +173,7 @@ section {
 textarea {
     background-color: $main-background-col;
     border-radius: $border-rad;
-    border: 2px solid $input-border-col;
+    border: $input-border;
     color: $main-text-col;
     font-family: $body-font-family;
     width: 100%;
@@ -194,7 +197,7 @@ textarea {
 }
 
 .button:hover {
-    border: 2px solid $input-border-col;
+    border: $input-border;
     background-color: $alt-background-col;
     color: $main-text-col;
     border: $main-mid-color solid 1px !important;
@@ -236,13 +239,26 @@ form {
     width: 100%;
 }
 
-@mixin focus-effect{
+
+br {
+    font-size: 0;
+    width: 0;
+    height: 0;
+    margin: 0;
+    padding: 0;
+}
+
+@mixin focus-effect {
     outline: 1px solid white;
+}
+
+*:focus {
+    @include focus-effect;
 }
 
 .input-generic {
     background-color: $alt-background-col;
-    border: 2px solid $input-border-col;
+    border: $input-border;
     background-color: $alt-background-col;
     border-radius: $border-rad;
     padding: 0.5em 2em;
@@ -254,25 +270,15 @@ form {
     font-size: $input-font-size;
 }
 
-br{
-    font-size: 0;
-    width: 0;
-    height: 0;
-    margin: 0;
-    padding: 0;
+input {
+    @extend .input-generic;
 }
 
 input[type=date] {
-    @extend .input-generic;
-
     &::-webkit-calendar-picker-indicator {
         // make date selection white by inverting it
         filter: invert(100%);
     }
-}
-
-input[type=text] {
-    @extend .input-generic;
 }
 
 .big-text-input {
@@ -292,18 +298,39 @@ input[type=text] {
     width: 100%;
 
     padding: 2em;
-    background-color: rgba(0,0,0, 0.2);
+    border: 4px solid rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.2);
     border-radius: $border-rad;
+
+    .add-field-button {
+        @extend .input-generic;
+        cursor: pointer;
+        padding: 1em;
+        margin: 0;
+        width: 1em;
+        height: 1em;
+
+        &:hover {
+            background-color: $input-hover-col;
+        }
+    }
 
     div {
         align-items: center;
         display: inline-flex;
         gap: 0em;
         background-color: $alt-background-col;
-        border-radius: $border-rad;
 
-        &:focus-within{
+        border-radius: $border-rad;
+        border: $input-border;
+
+        &:focus-within {
             @include focus-effect;
+            background-color: $input-hover-col;
+        }
+
+        &:hover {
+            background-color: $input-hover-col;
         }
 
         input {
@@ -314,35 +341,15 @@ input[type=text] {
             outline-style: none; // disable focus outline 
         }
 
-        img {
-            color: $input-border-col;
-            font-weight: bold;
-            font-size: 1em;
+        .remove-field-button {
+            color: $input-hover-col;
             width: 1em;
-            margin: 1em;
+            margin: 0.5em;
+            padding: 0.5em; // make it easier to click
             cursor: pointer;
         }
+
     }
-
-    > button {
-        color: white;
-        border: none;
-        width: 3em;
-        height: 3em;
-        border-radius: 100%;
-        background-color: $alt-background-col;
-        margin: 0;
-        cursor: pointer;
-
-        &:hover {
-            background-color: white;
-            color: $alt-background-col;
-        }
-    }
-}
-
-.input-multi > div > input:focus ~ .input-multi > div{
-    background-color: red;
 }
 
 input[type=submit] {
@@ -380,7 +387,7 @@ input[type=submit] {
     }
 
     &:hover {
-        background-color: $input-border-col;
+        background-color: $mid-gray-col;
     }
 }
 
