--- a/public/main.scss
+++ b/public/main.scss
@@ -54,14 +54,39 @@ body>header {
 }
 
 .search-container {
+    display: flex;
+    align-items: center;
     margin-left: 1em;
     margin-right: auto;
 }
 
+#addMovieButton {
+    height: 3.5em;
+    width: 3.5em;
+
+    margin: 0;
+    border-radius: 100px;
+    cursor: pointer;
+    background-color: transparent;
+    border: white 2px solid;
+
+    padding: 0;
+
+    transition: background-color 250ms;
+
+    // icon
+    img {
+        margin: 0;
+    }
+
+    &:hover {
+        background-color: $mid-gray-col;
+    }
+}
 
 section {
     margin: 0 auto;
-    width: 95%;
+    width: 90%;
 }
 
 // TODO: This likely doesnt work on firefox!!
@@ -119,7 +144,7 @@ section {
     z-index: 2;
     opacity: 0;
 
-    .review- {
+    .review-form {
         background-color: $alt-background-col;
     }
 
@@ -132,7 +157,7 @@ section {
         padding: 1em;
     }
 
-    header>button {
+    header > button {
         margin-left: auto;
     }
 
@@ -167,7 +192,48 @@ section {
 }
 
 #movieAddPage {
-    width: 90%;
+    width: 95%;
+    border-radius: $border-rad;
+
+    .flex-grid{
+        margin-top: 4em;
+        column-gap: 2em;
+        align-items: flex-start;
+        justify-content: space-between;
+    }
+
+    .upload-image-area {
+        width: 30%;
+        margin: 0;
+        border: 3px dashed $main-mid-color;
+        border-radius: 25px;
+        background-color: $alt-background-col;
+
+        div {
+            color: $main-mid-color;
+            text-align: center;
+            display: block;
+            margin: 50% auto;
+
+            p {
+                margin-top: 2em;
+            }
+
+            object {
+                display: block;
+                margin: auto;
+            }
+        }
+    }
+
+    form {
+        width: 65%;
+    }
+
+    #movieAddPageExitButton{
+        width: 5%;
+        margin: 0.5em;
+    }
 }
 
 textarea {
@@ -210,36 +276,6 @@ textarea {
     margin: 1em;
 }
 
-// inputs
-.upload-image-area {
-    width: 50%;
-    margin: 1em;
-    border: 3px dashed $main-mid-color;
-    border-radius: 25px;
-    background-color: $alt-background-col;
-
-    div {
-        color: $main-mid-color;
-        text-align: center;
-        display: block;
-        margin: 50% auto;
-
-        p {
-            margin-top: 2em;
-        }
-
-        object {
-            display: block;
-            margin: auto;
-        }
-    }
-}
-
-form {
-    width: 100%;
-}
-
-
 br {
     font-size: 0;
     width: 0;
@@ -257,14 +293,15 @@ br {
 }
 
 .input-generic {
+    display: inline-block;
+    box-sizing: border-box;
     background-color: $alt-background-col;
     border: $input-border;
-    background-color: $alt-background-col;
     border-radius: $border-rad;
     padding: 0.5em 2em;
     color: $main-text-col;
-    height: 2em;
-    margin: 1em;
+    height: 3em;
+    margin: 0.25em;
 
     font-family: $body-font-family;
     font-size: $input-font-size;
@@ -282,33 +319,36 @@ input[type=date] {
 }
 
 .big-text-input {
-    font-size: large !important; // override
+    font-size: large; // override
     width: 100%;
-    margin: -1em 0 1em 0;
+    height: 3em;
     font-weight: bold;
+    margin-left: 0;
+    margin-top: 0;
+}
+
+hr{
+    border: $mid-gray-col 1px solid;
 }
 
 .input-multi {
+    box-sizing: border-box; // makes element fit properly
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     column-gap: 1em;
     row-gap: 1em;
-    margin: 1em;
-    width: 100%;
+    margin: 0.5em;
 
-    padding: 2em;
-    border: 4px solid rgba(0, 0, 0, 0.2);
-    background-color: rgba(0, 0, 0, 0.2);
-    border-radius: $border-rad;
-
+    $field-height: 2.5em;
+    
     .add-field-button {
         @extend .input-generic;
         cursor: pointer;
-        padding: 1em;
+        padding: 0.6em;
         margin: 0;
-        width: 1em;
-        height: 1em;
+        width: $field-height;
+        height: $field-height;
 
         &:hover {
             background-color: $input-hover-col;
@@ -316,8 +356,9 @@ input[type=date] {
     }
 
     div {
-        align-items: center;
+        height: $field-height;
         display: inline-flex;
+        align-items: center;
         gap: 0em;
         background-color: $alt-background-col;
 
@@ -343,12 +384,11 @@ input[type=date] {
 
         .remove-field-button {
             color: $input-hover-col;
-            width: 1em;
+            width: 0.75em;
             margin: 0.5em;
             padding: 0.5em; // make it easier to click
             cursor: pointer;
         }
-
     }
 }
 
@@ -364,37 +404,19 @@ input[type=submit] {
     background-color: white;
     border-radius: 5em;
     padding: 0.5em;
+    height: 3em;
     width: 25vw;
     color: black;
 }
 
-#addMovieButton {
-    border-radius: 100px;
-    cursor: pointer;
-    background-color: transparent;
-    color: white;
-    border: white 1px solid;
-    padding: 0.5em;
-    margin: 0;
-    transition: background-color 250ms;
-
-    // icon
-    img {
-        margin: 0 auto -4px auto;
-        width: 1.25em;
-        stroke: black;
-        transition: width 250ms;
-    }
-
-    &:hover {
-        background-color: $mid-gray-col;
-    }
-}
-
 label {
     font-size: 16px;
+    font-weight: bold;
     color: $main-text-col;
-    margin: 0.5em;
+    // margin: 0.5em;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 .exit-button {
