--- a/public/main.scss
+++ b/public/main.scss
@@ -15,6 +15,11 @@ $field-height: 2em;
 // global fonts
 $body-font-family: 'Inter', Arial, Helvetica, sans-serif;
 
+// mixins
+@mixin focus-effect {
+    outline: 1px solid white;
+}
+
 body {
     font-family: $body-font-family;
     margin: 0;
@@ -44,7 +49,7 @@ body>header {
         gap: 5em;
         margin-right: 2em;
 
-        div{
+        div {
             display: flex;
             align-items: center;
             column-gap: 1em;
@@ -124,7 +129,7 @@ section {
     $scale-factor: 1.1;
     $default-color: rgb(186, 186, 186);
 
-    height: 20px + $card-height * $scale-factor;
+    // height: 20px + $card-height * $scale-factor;
     margin: 2em 0em 4em 0.25em;
     overflow: auto;
     overflow-y: hidden; // disable vertical scroll
@@ -132,48 +137,80 @@ section {
     display: flex;
 
     .card {
+        width: $card-width;
+        height: $card-height;
+
+        box-sizing: border-box;
         background-image: url("images/poster_na.jpg");
         background-size: cover;
         background-repeat: none;
         height: $card-height;
-        border-radius: 19px;
+        border-radius: $border-rad;
         margin: 0.25em;
+        padding: 0;
+        color: $main-text-col;
+
         flex: 0 0 $card-width;
         transition: height 120ms, flex 120ms;
+
         cursor: pointer;
 
-        .card-info {
-            display: block;
-            flex-direction: column;
+        &:hover {
+            height: $card-height * $scale-factor;
+            flex: 0 0 $card-width * $scale-factor;
+        }
+
+        .card-backdrop {
+            @include focus-effect();
+            background: rgba(0, 0, 0, 0.7);
+            backdrop-filter: blur(4px);
+            border-radius: $border-rad;
             margin: 0;
-            padding-left: 1em;
-            padding-right: 1em;
-            color: $main-text-col;
+            padding: 0;
+            width: 100%;
+            height: 100%;
             opacity: 0;
             transition: opacity 250ms;
 
-            .card-footer {
-                .card-year {
-                    font-weight: bold;
+            .card-info {
+                display: flex;
+                border-radius: $border-rad;
+                flex-direction: column;
+                height: 100%;
+
+                // title
+                .card-heading {
+                    margin-top: 0.5em;
+
+                    &::selection {
+                        background-color: transparent;
+                    }
                 }
 
-                margin-top: 100%;
-                margin-bottom: 0;
+                .card-footer {
+                    margin-top: auto;
+
+                    .card-year {
+                        font-weight: bold;
+                    }
+
+                    // hide selection highlight
+                    &>*::selection {
+                        background-color: transparent;
+                    }
+
+                }
             }
 
         }
 
         &:hover {
-            .card-info {
+            .card-backdrop {
                 opacity: 1;
             }
         }
     }
 
-    .card:hover {
-        height: $card-height * $scale-factor;
-        flex: 0 0 $card-width * $scale-factor;
-    }
 }
 
 #movieDetailsPage {
@@ -190,6 +227,7 @@ section {
 
     .movie-information {
         margin-left: 3em;
+        width: 80%;
     }
 
     header {
@@ -204,8 +242,8 @@ section {
     .movie-page-container {
         display: flex;
 
-        #detailsPoster {
-            width: 30%;
+        #movie-details-poster {
+            width: 20%;
             height: 100%;
             border-radius: $border-rad;
             object-fit: cover;
@@ -215,7 +253,23 @@ section {
             display: flex;
 
             .details {
+                box-sizing: content-box;
                 margin-right: 3em;
+
+                h2{
+                    margin-top: 0;
+                }
+
+                >p {
+                    margin-right: 3em;
+                    border-left: 1px solid $main-text-col;
+                    padding-left: 1em;
+                }
+
+                #movie-details-synopsis {
+                    width: 25vw;
+                    margin: 0;
+                }
             }
 
         }
@@ -365,10 +419,6 @@ br {
     height: 0;
     margin: 0;
     padding: 0;
-}
-
-@mixin focus-effect {
-    outline: 1px solid white;
 }
 
 *:focus {
